@@ -11,7 +11,7 @@
   <configure name="LIB_VERSION" value="0x671"/>
   <configure name="LIB_VERSION_NUMBER" value="6,7,1,2"/>
   <configure name="SVN_REVISION" value="4861" />
-  <configure name="RELEASE_DATE" value="2011-08-01"/>
+  <configure name="RELEASE_DATE" value="2011-08-02"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
