@@ -1,3 +1,6 @@
+2011-08-02  6.7.1-2 Cristy  <quetzlzacatenango@image...>
+  * Windows does not support acosh(), asinh(), or atanh().
+
 2011-08-01  6.7.1-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.1-1.
 
